--- a/yes.html
+++ b/yes.html
@@ -19,7 +19,7 @@
     </div>
 
     <!-- Note: Positioned at the bottom near the footbar -->
-    <p style="position: fixed; bottom: 10px; left: 50%; transform: translateX(-50%); text-align: center; color: #777;">Congratulations on this special moment! 🎉 Customize this page to capture and celebrate your unique love story. 💑💖</p>
+    <p style="position: fixed; bottom: 10px; left: 50%; transform: translateX(-50%); text-align: center; color: #777;">Merci ma chérie, on va passer un moment spécial ensemble 💑💖</p>
 
     <!-- Include any external scripts if needed -->
 </body>
