Update footer text and GitHub link in index.html

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
         <!-- Positioned closer to the bottom with GitHub link -->
         <p class="made-with-love">
-            Made with love and a sprinkle of creativity by Prateek 💖✨. 
-            <a href="https://github.com/KanurkarPrateek/Valentines_Day_Proposal" class="github-link" target="_blank">⭐Star the repo on GitHub</a>.
+            Fait avec Amour pour ma chérie Morgane 💖✨. 
+            //<a href="https://www.toulouse-tourisme.com/" class="github-link" target="_blank">⭐</a>.
         </p>
     </div>
 </body>
