--- a/yes.html
+++ b/yes.html
@@ -15,7 +15,7 @@
             <img src="https://i.gifer.com/Pak.gif" alt="Cute animated illustration" style="margin-top: -60px;">
         </div>
         <!-- Adjusted position of the text element by 100px -->
-        <p class="text" style="margin-top: -30px;">Tu es maintenant la valentine d'Alcide :)</p>
+        <p class="text" style="margin-top: -30px;">Tu es maintenant la valentine d'Alcide</p>
     </div>
 
     <!-- Note: Positioned at the bottom near the footbar -->
