--- a/yes.html
+++ b/yes.html
@@ -9,13 +9,13 @@
 <body>
     <div class="container">
         <div>
-            <h1 class="header_text">Félicitations!!!</h1>
+            <h1 class="header_text">Tu es maintenant la valentine d'Alcide (que à lui)</h1>
         </div>
         <div class="gif_container">
             <img src="https://i.gifer.com/Pak.gif" alt="Cute animated illustration" style="margin-top: -60px;">
         </div>
         <!-- Adjusted position of the text element by 100px -->
-        <p class="text" style="margin-top: -30px;">Tu es maintenant la valentine d'Alcide</p>
+        <p class="text" style="margin-top: -30px;">La chance !</p>
     </div>
 
     <!-- Note: Positioned at the bottom near the footbar -->
